--- a/Denis Novik 2.0/assets/css/style.css
+++ b/Denis Novik 2.0/assets/css/style.css
@@ -64,8 +64,8 @@ body {
   width: 23px;
   height: 23px;
   position: absolute;
-  top: 66px;
-  right: 28px;
+  top: 76px;
+  right: 26px;
   z-index: 1001;
   border: none;
   background: #fff;
@@ -103,6 +103,22 @@ body {
 }
 .mobile-menu ul li a:hover {
   color: #090909;
+}
+
+#shadow {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+}
+
+#shadow.show {
+  display: block;
 }
 
 /* ------------Header-------------------- */
