--- a/Denis Novik 2.0/assets/css/style.scss
+++ b/Denis Novik 2.0/assets/css/style.scss
@@ -59,8 +59,8 @@ body {
 		width: 23px;
 		height: 23px;
 		position: absolute;
-		top: 66px;
-		right: 28px;
+		top: 76px;
+		right: 26px;
 		z-index: 1001;
 		border: none;
 		background: #fff;
@@ -69,7 +69,6 @@ body {
 		}
 	}
 	.language {
-		
 		position: absolute;
 		top: 815px;
 		right: -182px;
@@ -80,7 +79,6 @@ body {
 }
 #mobile-menu.open {
 	transform: translateX(0);
-
 }
 .mobile-menu ul {
 	// padding: 26px 0;
@@ -88,18 +86,33 @@ body {
 }
 
 .mobile-menu ul li a{
-display: inline-block;
-text-decoration: none;
-padding: 24px 0 25px 26px;
-font-size: 34px;
-line-height: 42px;
-color: #828282;
-width: 100%;
-height: 100%;
-transition: all .2s ease;
-&:hover {
-color: #090909;
+	display: inline-block;
+	text-decoration: none;
+	padding: 24px 0 25px 26px;
+	font-size: 34px;
+	line-height: 42px;
+	color: #828282;
+	width: 100%;
+	height: 100%;
+	transition: all .2s ease;
+	&:hover {
+		color: #090909;
+	}
 }
+
+#shadow {
+	display: none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	z-index: 999;
+	background: rgba(0, 0, 0, .5);
+	backdrop-filter: blur(4px);
+}
+#shadow.show {
+display: block;
 }
 /* ------------Header-------------------- */
 .container {
