--- a/SideBar Navigation/assets/fonts/icon/style.css
+++ b/SideBar Navigation/assets/fonts/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?40mhj8');
-  src:  url('fonts/icomoon.eot?40mhj8#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?40mhj8') format('truetype'),
-    url('fonts/icomoon.woff?40mhj8') format('woff'),
-    url('fonts/icomoon.svg?40mhj8#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?hpa2ny');
+  src:  url('fonts/icomoon.eot?hpa2ny#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?hpa2ny') format('truetype'),
+    url('fonts/icomoon.woff?hpa2ny') format('woff'),
+    url('fonts/icomoon.svg?hpa2ny#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,171 +25,177 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-Search:before {
+.icon-Chat:before {
+  content: "\e926";
+  color: #4f4f4f;
+}
+.icon-search:before {
   content: "\e900";
   color: #4f4f4f;
 }
-.icon-Chats:before {
+.icon-line:before {
   content: "\e901";
-  color: #9e8cfc;
 }
-.icon-Components:before {
+.icon-Editor:before {
   content: "\e902";
   color: #4f4f4f;
 }
-.icon-dashboard:before {
+.icon-Pages:before {
   content: "\e903";
   color: #4f4f4f;
 }
-.icon-Ecommerce:before {
+.icon-Components:before {
   content: "\e904";
   color: #4f4f4f;
 }
-.icon-Editor:before {
+.icon-Ecommerce:before {
   content: "\e905";
   color: #4f4f4f;
 }
-.icon-Email:before {
+.icon-Feather:before {
   content: "\e906";
   color: #4f4f4f;
 }
-.icon-Feather:before {
+.icon-Log-Out:before {
   content: "\e907";
   color: #4f4f4f;
 }
-.icon-File-manager:before {
+.icon-Permissions:before {
   content: "\e908";
   color: #4f4f4f;
 }
-.icon-Calendar:before {
+.icon-Profile:before {
   content: "\e909";
   color: #4f4f4f;
 }
-.icon-Star:before {
+.icon-Leaflet-Maps:before {
   content: "\e90a";
   color: #4f4f4f;
 }
-.icon-Knowledge:before {
+.icon-File-manager:before {
   content: "\e90b";
   color: #4f4f4f;
 }
-.icon-lamp:before {
+.icon-Knowledge:before {
   content: "\e90c";
   color: #4f4f4f;
 }
-.icon-lang .path1:before {
+.icon-news:before {
   content: "\e90d";
-  color: rgb(236, 28, 36);
+  color: #4f4f4f;
 }
-.icon-lang .path2:before {
+.icon-dashboard:before {
   content: "\e90e";
-  margin-left: -1em;
-  color: rgb(230, 231, 232);
-}
-.icon-lang .path3:before {
-  content: "\e90f";
-  margin-left: -1em;
-  color: rgb(236, 28, 36);
-}
-.icon-lang .path4:before {
-  content: "\e910";
-  margin-left: -1em;
-  color: rgb(230, 231, 232);
-}
-.icon-lang .path5:before {
-  content: "\e911";
-  margin-left: -1em;
-  color: rgb(236, 28, 36);
-}
-.icon-lang .path6:before {
-  content: "\e912";
-  margin-left: -1em;
-  color: rgb(230, 231, 232);
-}
-.icon-lang .path7:before {
-  content: "\e913";
-  margin-left: -1em;
-  color: rgb(236, 28, 36);
-}
-.icon-lang .path8:before {
-  content: "\e914";
-  margin-left: -1em;
-  color: rgb(230, 231, 232);
-}
-.icon-lang .path9:before {
-  content: "\e915";
-  margin-left: -1em;
-  color: rgb(236, 28, 36);
-}
-.icon-lang .path10:before {
-  content: "\e916";
-  margin-left: -1em;
-  color: rgb(230, 231, 232);
-}
-.icon-lang .path11:before {
-  content: "\e917";
-  margin-left: -1em;
-  color: rgb(236, 28, 36);
-}
-.icon-lang .path12:before {
-  content: "\e918";
-  margin-left: -1em;
-  color: rgb(230, 231, 232);
-}
-.icon-lang .path13:before {
-  content: "\e919";
-  margin-left: -1em;
-  color: rgb(236, 28, 36);
-}
-.icon-lang .path14:before {
-  content: "\e91a";
-  margin-left: -1em;
-  color: rgb(23, 100, 150);
-}
-.icon-lang .path15:before {
-  content: "\e91b";
-  margin-left: -1em;
-  color: rgb(255, 255, 255);
-}
-.icon-LeafletMaps:before {
-  content: "\e91c";
   color: #4f4f4f;
 }
 .icon-lightBoard .path1:before {
-  content: "\e91d";
+  content: "\e90f";
   color: rgb(158, 140, 252);
 }
 .icon-lightBoard .path2:before {
-  content: "\e91e";
+  content: "\e910";
   margin-left: -1em;
   color: rgb(255, 255, 255);
 }
 .icon-lightBoard .path3:before {
-  content: "\e91f";
+  content: "\e911";
   margin-left: -1em;
   color: rgb(255, 255, 255);
 }
-.icon-LogOut:before {
+.icon-profile-img:before {
+  content: "\e912";
+}
+.icon-settings:before {
+  content: "\e913";
+  color: #4f4f4f;
+}
+.icon-lamp:before {
+  content: "\e914";
+  color: #4f4f4f;
+}
+.icon-lang-icon .path1:before {
+  content: "\e915";
+  color: rgb(236, 28, 36);
+}
+.icon-lang-icon .path2:before {
+  content: "\e916";
+  margin-left: -1em;
+  color: rgb(230, 231, 232);
+}
+.icon-lang-icon .path3:before {
+  content: "\e917";
+  margin-left: -1em;
+  color: rgb(236, 28, 36);
+}
+.icon-lang-icon .path4:before {
+  content: "\e918";
+  margin-left: -1em;
+  color: rgb(230, 231, 232);
+}
+.icon-lang-icon .path5:before {
+  content: "\e919";
+  margin-left: -1em;
+  color: rgb(236, 28, 36);
+}
+.icon-lang-icon .path6:before {
+  content: "\e91a";
+  margin-left: -1em;
+  color: rgb(230, 231, 232);
+}
+.icon-lang-icon .path7:before {
+  content: "\e91b";
+  margin-left: -1em;
+  color: rgb(236, 28, 36);
+}
+.icon-lang-icon .path8:before {
+  content: "\e91c";
+  margin-left: -1em;
+  color: rgb(230, 231, 232);
+}
+.icon-lang-icon .path9:before {
+  content: "\e91d";
+  margin-left: -1em;
+  color: rgb(236, 28, 36);
+}
+.icon-lang-icon .path10:before {
+  content: "\e91e";
+  margin-left: -1em;
+  color: rgb(230, 231, 232);
+}
+.icon-lang-icon .path11:before {
+  content: "\e91f";
+  margin-left: -1em;
+  color: rgb(236, 28, 36);
+}
+.icon-lang-icon .path12:before {
+  content: "\e920";
+  margin-left: -1em;
+  color: rgb(230, 231, 232);
+}
+.icon-lang-icon .path13:before {
   content: "\e921";
-  color: #4f4f4f;
+  margin-left: -1em;
+  color: rgb(236, 28, 36);
 }
-.icon-news:before {
+.icon-lang-icon .path14:before {
   content: "\e922";
-  color: #4f4f4f;
+  margin-left: -1em;
+  color: rgb(23, 100, 150);
 }
-.icon-Pages:before {
+.icon-lang-icon .path15:before {
   content: "\e923";
-  color: #4f4f4f;
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
 }
-.icon-Permissions:before {
+.icon-headr-star:before {
   content: "\e924";
   color: #4f4f4f;
 }
-.icon-Profile:before {
+.icon-header-colendar:before {
   content: "\e925";
   color: #4f4f4f;
 }
-.icon-Settings:before {
-  content: "\e926";
+.icon-Email:before {
+  content: "\e927";
   color: #4f4f4f;
 }
