ADded changes for Form style

--- a/Form Style/assets/css/style.scss
+++ b/Form Style/assets/css/style.scss
@@ -17,8 +17,13 @@ ul, ol {
 
 a {
 	text-decoration: none;
-}
+	cursor: pointer;
 
+}
+button {
+	cursor: pointer;
+
+}
 html, body {
 	width: 100%;
 	height: 100%;
