--- a/Exam-First website/assets/css/response.scss
+++ b/Exam-First website/assets/css/response.scss
@@ -1,68 +1,73 @@
+@media screen and (min-width: 1361px){
+	.wrap-dashed{
+
+	padding: 0 194px;
+	
+	}
+	
+}
+@media screen and (max-width: 1361px){
+	.wrap-dashed{
+		padding: 0px 14.55588vw;
+	}
+}
 @media screen and (max-width: 1024px){
 	.container {
 		width: 94%;
 		max-width: 960px;
 	}
-
-	.review-info {
-		// flex-wrap: wrap;
-
-		.user-image {
-			max-width: 320px;
-			padding-left: 33.5%;
-		}
-		&__text {
-			padding: 48px 60px;
-			max-width: 640px;
+	.aboutus {
+		.container {
+			gap: 15px;
 		}
 	}
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 820px){
 	.container {
 		max-width: 720px;
 	}
-	.first-screen .wrap-form {
-// width: 100%;
-	}
-
 	.header {
-		// height: 163px;
+		height: 136px;
 		.container {
 			flex-wrap: wrap;
 			display: flex;
 			align-items: center;
 			justify-content: center;
-		}
-		.header-menu__list {
-			display: flex;
-			gap: 40px;
-			width: 100%;
-			height: 100%;
-			// @extend .aleo;
-			text-transform: uppercase;
+			padding: 19px 0;
 		}
 	}
-
-
+	.header.fixed .container {
+		padding: 18px;
+		.wrap-logo {
+			display: none;
+		}
+	}
 	.aboutus {
+		padding: 60px 0;
 		.container {
+			gap: 33px;
 			flex-wrap: wrap-reverse;
 		}
 		.wrap-info {
 			max-width: 100%;
 			text-align: center;
 		}
+		.info__text {
+			padding: 24px 0;
+		}
 		.wrap-images {
 			width: 100%;
 			flex-wrap: wrap;
 			flex-direction: row;
-			gap: 24px;
+			gap: 0;
+			justify-content: space-between;
 			& div+div {
 				padding-top: 0;
 			}
 			.image {
-				width: 348px;
+				// max-width: 348px;
+				max-width: 48.334%;
 			}
 		}
 		.wrap-btn {
@@ -70,27 +75,138 @@
 		}
 	}
 
-		
+	.steps {
+		padding:75px 0 60px;
+		&__list {
+			flex-direction: column;
+			align-items: center;
+			gap: 75px;
+		}
 	}
 
+	.wrap-dashed{
+		display: none;
+	}
+
+	.location.top,
+	.location.bottom {
+		padding: 120px 0;
+		.info__text {
+		padding: 16px 0 28px;
+		}
+		.info.grand {
+			max-width: 100%;
+		}
+	}
+	
 
 
-// @media screen and (max-width: 720px){
-// 	.container {
-// 		max-width: 680px;
-// 	}
-// 	.first {
-// 		.wrap-form {
-// 			width: 100%;
-// 		}
-// 		input [type=search] {
-// 			width: 100%;
-// 		}
-// 	} 
-// }
+	.review {
+		padding: 60px 0 120px;
+
+	}
+	.review-info {
+		display: block;
+		.user-image {
+			max-width: 100%;
+
+			padding-left: 0;
+	
+			img {
+			position: relative;
+			}
+		}
+		&__text {
+			// padding: 48px 59px;
+			max-width: 100%;
+		}
+	}
+}
+
+@media screen and (max-width: 680px){
+	.container {
+		max-width: 640px;
+	}
+	#shadow.show {
+		display: block;
+			
+		}
+	#sidebar {
+		display: block;
+	}
+	#sidebar .sidebar {
+		display: block;
+		width: fit-content;
+	}
+
+	.header {
+		height: 84px;
+		&-menu {
+			display: block;
+		}
+		.btn-burger.menu,
+		.btn-burger.closed {
+			display: block;
+		}
+		.container {
+			flex-wrap: wrap;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
+
+	.header.fixed .container .wrap-logo{ 
+		display: block;
+	}
+	.header.fixed .menu{
+		top: 18px;
+	}
+		.header .header-menu__list {
+		display: none;
+	}
+
+	#sidebar.open .sidebar-menu__list {
+		display: block;
+		text-align: center;
+		li + li {
+			padding-top: 24px;
+		}
+	}
+}
 
 @media screen and (max-width: 576px){
 	.container {
 		max-width: 540px;
 	}
+	.aboutus .container {
+    gap: 36px;
+	}
+	.aboutus .info__text {
+    padding: 21px 0;
 }
+}
+
+@media screen and (max-width: 480px){
+	.container {
+		max-width: 450px;
+	}
+	.aboutus .wrap-images {
+		gap: 20px;
+		
+		.image {
+			max-width: 100%;
+			width: 100%;
+		}
+	}
+	.steps {
+    padding: 60px 0;
+	}
+	.location.bottom, .location.top {
+    padding: 60px 0;
+	}
+	.review {
+    padding: 60px 0;
+	}
+}
+
