--- a/Exam-First website/assets/css/response.scss
+++ b/Exam-First website/assets/css/response.scss
@@ -36,6 +36,12 @@
 			justify-content: center;
 			padding: 19px 0;
 		}
+		.header-menu__list{
+			margin-top: 9px;
+		}
+		&.fixed .header-menu__list{
+			margin-top: 0px;
+		}
 	}
 	.header.fixed .container {
 		padding: 18px;
@@ -43,6 +49,7 @@
 			display: none;
 		}
 	}
+
 	.aboutus {
 		padding: 60px 0;
 		.container {
