--- a/Exam-First website/assets/css/style.css
+++ b/Exam-First website/assets/css/style.css
@@ -71,6 +71,7 @@ ul, ol {
 img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
   vertical-align: top;
 }
@@ -155,6 +156,7 @@ img {
   top: 0;
   z-index: 999;
   background: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
 }
 
@@ -215,6 +217,42 @@ img {
   font-size: 1.125rem;
   font-weight: 400;
   color: #787878;
+}
+.first-screen input[type=text]::-webkit-input-placeholder {
+  font-family: "Josefin Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2em;
+  color: #999999;
+}
+.first-screen input[type=text]::-moz-placeholder {
+  font-family: "Josefin Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2em;
+  color: #999999;
+}
+.first-screen input[type=text]:-ms-input-placeholder {
+  font-family: "Josefin Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2em;
+  color: #999999;
+}
+.first-screen input[type=text]::-ms-input-placeholder {
+  font-family: "Josefin Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.2em;
+  color: #999999;
 }
 .first-screen input[type=text]::placeholder {
   font-family: "Josefin Sans";
@@ -296,6 +334,7 @@ img {
   left: 0;
   top: 0;
   background: rgba(83, 115, 253, 0.4);
+  -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
   transition: all 0.2s ease;
 }
@@ -313,9 +352,6 @@ img {
 }
 .header .wrap-logo.sm {
   width: 165px;
-}
-.header .header-menu__list {
-  margin-top: 9px;
 }
 .header .header-menu__list,
 .header .sidebar-menu__list {
@@ -555,7 +591,7 @@ img {
 }
 .location.bottom .container {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .review {
