Added Autoprefix for response

--- a/Exam-First website/assets/css/response.css
+++ b/Exam-First website/assets/css/response.css
@@ -137,6 +137,8 @@
 
   #sidebar .sidebar {
     display: block;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
   }
 
