--- a/Exam-First website/assets/css/response.scss
+++ b/Exam-First website/assets/css/response.scss
@@ -143,6 +143,8 @@
 	}
 	#sidebar .sidebar {
 		display: block;
+		width: -webkit-fit-content;
+		width: -moz-fit-content;
 		width: fit-content;
 	}
 
