--- a/Monticello/assets/css/style.css
+++ b/Monticello/assets/css/style.css
@@ -276,6 +276,8 @@ img {
   display: none;
   padding: 70px;
   position: fixed;
+  font-family: "Source Sans Pro";
+  font-weight: 700;
   top: -360px;
   left: 0;
   height: 360px;
