--- a/Monticello/assets/css/style.css
+++ b/Monticello/assets/css/style.css
@@ -434,7 +434,7 @@ img {
 .header-menu__list li:active::before {
   transform: scale(0.2);
   background-color: #e1e1e1;
-  box-shadow: 0 0 0px 10px #7c7c7c;
+  box-shadow: 0 0 10px #fefefe;
 }
 
 /*   ABOUT -------------------------------------*/
