--- a/Monticello/assets/css/style.scss
+++ b/Monticello/assets/css/style.scss
@@ -330,8 +330,8 @@ img {
 }
 .item{
 	text-align: center;
-	height: 800px;
-	padding: 330px 0;
+	// height: 800px;
+	padding: 334px 0;
 	&__title{
 		padding-bottom: 20px;
 	}
